[package]
name = "FileFox"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.22"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
image = "0.24"
winres = "0.1"
windres = "0.2.2"
ico = "0.3"
rayon = "1.8"
walkdir = "2.3"

[build-dependencies]
winres = "0.1"
